tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__LESUUpgradeEVTie-AAAAAAAAAAAAAAAAAAAHJA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1828,
  "prerequisites": [
    176,
    1827
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Close to 8 Stacks of LESU Casings, this upgrade enables EV Voltage on your LESU. It's easy until now.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "L.E.S.U. Upgrade - EV Tier",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176,
    1827
  ],
  "rewards": [],
  "tasks": []
}
