tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__LESUUpgradeIVTie-AAAAAAAAAAAAAAAAAAAHJQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1829,
  "prerequisites": [
    1828,
    213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "24 Stacks of LESU Casings. These do fit in your Inventory, but crafting them is another problem.\n\n[note]If you don't want to clear out your inventory, just check the box when you have enough.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "L.E.S.U. Upgrade - IV Tier",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1828,
    213
  ],
  "rewards": [],
  "tasks": []
}
