tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__LESUUpgradeLuVTi-AAAAAAAAAAAAAAAAAAAHJg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1830,
  "prerequisites": [
    1493,
    1829
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To reach the highest Voltage Tier the LESU can offer, you need to add an additional amount of LESU Casings. 8193 Casings in total (all upgrades below and these additional) enable the LuV Input Voltage.\n\n[note]I mean you could do that, but maybe just check the box once your autocrafting is done.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "L.E.S.U. Upgrade - LuV Tier",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1493,
    1829
  ],
  "rewards": [],
  "tasks": []
}
