tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__LapotronicCapaci-AAAAAAAAAAAAAAAAAAAKrw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2735,
  "prerequisites": [
    2734
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It holds more than the previous tier, other than that there is no difference. Your LSC can hold between 5.4T and 81T EU with these.\n\n[note]Requires IV-tier Glass.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Lapotronic Capacitor (UV)",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2734
  ],
  "rewards": [],
  "tasks": []
}
